# portfwd

./: CREDITS  Makefile.am  Makefile.in  README  TODO  acconfig.h  aclocal.m4  bootstrap  config.h.in  configure  configure.in
cfg/: alias.cfg  bind-new.cfg  bind.cfg  chain.cfg  debug_ftp.cfg  dns.cfg  empty.cfg  external-director.cfg  fragile.cfg  ftp.cfg  load-balance.cfg  mail.cfg  portfwd1.cfg  portfwd2.cfg  single.cfg  test.cfg  udp.cfg  x.cfg
config/: mkinstalldirs
contrib/: suggestions.txt
doc/: FAQ  Makefile.am  Makefile.in  conf.txt  portfwd.8  portfwd.cfg.5
getopt/: Makefile.am  Makefile.in  getopt.h  getopt.h.diff
pkg/: portfwd.spec
pkg/deb/: portfwd_V.SS-R_i386.txt
pkg/deb/portfwd_V.SS-R_i386/DEBIAN/: conffiles  control  postinst  postrm
src/: Makefile.am  Makefile.in  addr.cc  addr.h  conf.lex  conf.y  director.cc  director.hpp  dst_addr.cc  dst_addr.hpp  entry.cc  entry.hpp  fd_set.cc  fd_set.h  forward.cc  forward.h  from_addr.cc  from_addr.hpp  host_map.cc  host_map.hpp  iterator.hpp  lexconf.c  net_portion.cc  net_portion.h  port_pair.cc  port_pair.h  portfwd.cc  portfwd.h  proto_map.cc  proto_map.hpp  solve.cc  solve.h  to_addr.cc  to_addr.hpp  util.cc  util.h  util.hpp  vector.hpp  yconf.c  yconf.h
tools/: Makefile.am  Makefile.in  crash_pftp.sh  have_msg_proxy.c  portfwd.init  sample-director.pl  stress_onthefly_dns.sh  t_vector.cc  udp_rcv.cc  udp_snd.cc
