dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/addr.cc)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(portfwd,"0.22rc0")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_RANLIB


dnl Checks for libraries.
AC_CHECK_LIB(socket, socket) 
AC_CHECK_LIB(nsl, gethostbyname) 

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(getopt.h fcntl.h sys/file.h sys/ioctl.h sys/time.h syslog.h unistd.h sys/termios.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

dnl Checks for library functions.
AC_FUNC_ALLOCA
dnl AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(getopt_long select socket strdup strerror)

LIBS="$LIBS $LEXLIB"
AC_SUBST(LIBS)

REAL_CC=$CC
CC=$CXX
AC_SUBST(REAL_CC)
AC_SUBST(CC)
AC_OUTPUT(getopt/Makefile src/Makefile tools/Makefile doc/Makefile Makefile)
