dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/addr.cc)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(portfwd,"0.24rc0")

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_YACC
AM_PROG_LEX
AC_PROG_RANLIB


dnl Checks for library, function.
AC_CHECK_LIB(socket, socket) 
AC_CHECK_LIB(nsl, gethostbyname) 

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(getopt.h fcntl.h sys/file.h sys/ioctl.h sys/time.h syslog.h unistd.h sys/termios.h sys/socket.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

dnl Checks for library functions.
AC_FUNC_ALLOCA
dnl AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(getopt_long select socket strdup strerror)

dnl Checks for MSG_PROXY symbol
AC_TRY_RUN(
[
#include <sys/socket.h>
int main()
{
#ifdef MSG_PROXY
  exit(0);
#else
  exit(1);
#endif
}
], 
[AC_DEFINE(HAVE_MSG_PROXY, 1, [Define if you have MSG_PROXY in <sys/socket.h>])],
echo "Transparent proxy support is NOT present in kernel",
echo "Transparent proxy support disabled by cross-compiling"
)

LIBS="$LIBS $LEXLIB"
AC_SUBST(LIBS)

REAL_CC=$CC
CC=$CXX
AC_SUBST(REAL_CC)
AC_SUBST(CC)

AC_OUTPUT(getopt/Makefile src/Makefile tools/Makefile doc/Makefile Makefile)
